--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-1.0 Beta
+<html>
+   <head>
+      <title>MMA-Site</title>
+   </head>
+   <body>
+      <div>
+         <p id="Version">1.0 Beta</p>
+      </div>
+   </body>
+</html>
