--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <div>
-         <p id="Version">1.0 Beta 1</p>
+         <p id="Version">1.0 Beta </p>
       </div>
    </body>
 </html>
