--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
-<html>
-   <head>
-      <title>MMA-Site</title>
-   </head>
-   <body>
-      <div>
-         <p id="Version">1.0 Beta</p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+  </head>
+  <body>
+    <header>
+      <div class="inner-width">
+        <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+        <i class="menu-toggle-btn fas fa-bars"></i>
+        <nav class="navigation-menu">
+          <a href="#"><i class="fas fa-home home"></i> Startseite</a>
+          <a href="#"><i class="fas fa-download download"></i> Download</a>
+          <a href="#"><i class="fas fa-align-left about"></i> Über mich</a>
+        </nav>
       </div>
-   </body>
+    </header>
+
+    <script type="text/javascript">
+      $(".menu-toggle-btn").click(function(){
+        $(this).toggleClass("fa-times");
+        $(".navigation-menu").toggleClass("active");
+      });
+    </script>
+  </body>
 </html>
