--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mensa Menü App</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="img/ico" href="img/mma-favicon.ico"/>
