--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
       <div class="inner-width">
         <a href="#" class="logo"><img src="img/logo.png" alt=""></a>
+        <a href="#" class="version">Version: 1.0 Beta</a>
         <i class="menu-toggle-btn fas fa-bars"></i>
         <nav class="navigation-menu">
           <a href="#"><i class="fas fa-home home"></i> Startseite</a>
@@ -21,7 +22,7 @@
         </nav>
       </div>
     </header>
-    
+
     <script type="text/javascript">
       $(".menu-toggle-btn").click(function(){
         $(this).toggleClass("fa-times");
