Updatet with Download

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <i class="menu-toggle-btn fas fa-bars"></i>
         <nav class="navigation-menu">
           <a href="#"><i class="fas fa-home home"></i> Startseite</a>
-          <a href="#"><i class="fas fa-download download"></i> Download</a>
+          <a href="resources/MensaMenu.apk"><i class="fas fa-download download"></i> Download</a>
           <a href="#"><i class="fas fa-align-left about"></i> Über mich</a>
         </nav>
       </div>
